Add drop down items

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,32 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="bg"></div>
+    <nav>
+      <ul class="nav-menu">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Projects</a>
+          <ul class="nav-menu-item-dd expand-contract-contracted">
+            <a href="#"><li>Project-1</li></a>
+            <a href="#"><li>Project-2</li></a>
+            <a href="#"><li>Project-3</li></a>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Photography</a>
+          <ul class="nav-menu-item-dd expand-contract-contracted">
+            <a href="#"><li>Weddings</li></a>
+            <a href="#"><li>Sports</li></a>
+            <a href="#"><li>Wildlife</li></a>
+          </ul>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
